# planet

./: .devcontainer.json  .gitignore  .hlint.yaml  .treefmt.toml  AGENTS.md  Makefile  TODO.md  TODO.md.example  devenv.nix  devenv.yaml  planet.cabal  planet.toml  stack.yaml  test_feed.hs
.github/workflows/: build.yml  deploy.yml  scheduled.yml
agents/: GLOSSARY.md  README.md
agents/adrs/: ADR-0000-agent-guidance.md
agents/stories/: US-001-aggregate-feeds.md  US-002-configure-planet.md  US-003-sort-feed-items.md  US-004-concurrent-fetching.md  US-005-self-contained-output.md  US-006-differentiate-feed-types.md  US-007-interactive-viewer.md  US-008-mobile-sidebar.md  US-009-client-side-search.md
elm-app/: .gitignore  README.md  elm.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
elm-app/src/: Data.elm  DateUtils.elm  I18n.elm  Main.elm  Ports.elm  Types.elm  View.elm  main.css  main.js
elm-app/tests/: DateUtilsTest.elm  MainTest.elm  TypesTest.elm  ViewTest.elm
src/: Config.hs  ElmGen.hs  FeedParser.hs  HtmlGen.hs  HtmlSanitizer.hs  I18n.hs  Main.hs  Planet.hs  Scripts.hs  Styles.hs
test/: ConfigSpec.hs  FeedParserSpec.hs  HtmlGenSpec.hs  I18nSpec.hs  Main.hs  PlanetSpec.hs  Spec.hs  TestMain.hs  TestSuite.hs  UtilsSpec.hs
tests/: Main.hs  Spec.hs  TestMain.hs  TestSuite.hs
