cabal-version: 2.2

name:           planet
version:        0.1.0.0
description:    RSS Planet generator
author:         Gemini Agent
maintainer:     gemini@example.com
copyright:      2025 Gemini Agent
license:        BSD-3-Clause
build-type:     Simple

executable planet
  main-is: Main.hs
  other-modules:
      Paths_planet
      I18n
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , text
    , bytestring
    , directory
    , filepath
    , time
    , containers
    , vector
    , unordered-containers
    , htoml-megaparsec
    , feed
    , xml-conduit
    , xml-types
    , http-conduit
    , http-client
    , http-client-tls
    , blaze-html
    , uri-bytestring
    , async
    , tagsoup
    , tz
  default-language: Haskell2010
