cabal-version: 2.2

name:           planet
version:        0.1.0.0
description:    RSS Planet generator
author:         Gemini Agent
maintainer:     gemini@example.com
copyright:      2025 Gemini Agent
license:        BSD-3-Clause
build-type:     Simple

library
  exposed-modules:
      Planet
      I18n
      FeedParser
      HtmlGen
      Styles
      Scripts
      Main
      Config
  other-modules:
      Paths_planet
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , text
    , bytestring
    , directory
    , filepath
    , time
    , containers
    , vector
    , unordered-containers
    , htoml-megaparsec
    , feed
    , xml-conduit
    , xml-types
    , http-conduit
    , http-client
    , http-client-tls
    , blaze-html
    , uri-bytestring
    , async
    , tagsoup
    , tz
    , tzdata
  default-language: Haskell2010

executable planet
  main-is: Main.hs
  other-modules:
      Paths_planet
      I18n
      Config
      FeedParser
      HtmlGen
      Planet
      Scripts
      Styles
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , text
    , bytestring
    , directory
    , filepath
    , time
    , containers
    , vector
    , unordered-containers
    , htoml-megaparsec
    , feed
    , xml-conduit
    , xml-types
    , http-conduit
    , http-client
    , http-client-tls
    , blaze-html
    , uri-bytestring
    , async
    , tagsoup
    , tz
    , tzdata
  default-language: Haskell2010

test-suite planet-tests
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  hs-source-dirs:
      tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , text
    , bytestring
    , directory
    , filepath
    , time
    , containers
    , vector
    , unordered-containers
    , htoml-megaparsec
    , feed
    , xml-conduit
    , xml-types
    , http-conduit
    , http-client
    , http-client-tls
    , blaze-html
    , uri-bytestring
    , async
    , tagsoup
    , tz
    , tzdata
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , Cabal
    , planet
  default-language: Haskell2010
